2002-12-14	<garetxe@users.sf.net>

	* it.po: Italian translation, contributed by Pino Toscano.

2002-11-28	<mschimek@users.sf.net>

	* Release 0.2.3.

2002-11-28	<mschimek@users.sf.net>

	* src/exp-vtx.c: Segv due to excess read of variable size
	  cached page structure. Patch #643211 by Art Pogoda.

2002-10-21	<mschimek@users.sf.net>

	* src: A few char* were not const typed.

2002-10-17	<mschimek@users.sf.net>

	* src/io-v4l2k.c, src/videodev2k.h,
	  src/io.h (vbi_capture_v4l2k_new): Added. V4l2 api revision
	  2002-10 for Linux 2.5 (untested, have to wait for drivers :-).
	* src/io-v4l2.c: Added fallback to v4l2k.c.
	* src/io-bktr.c: Added interface to FreeBSD/OpenBSD/NetBSD
	  bktr driver. Seems to work, more or less (bug or feature?).
	* src/export.c (vbi_ucs2be): Fixed format name UCS-2 (not UCS2).
	* test (getopt_long): Added fallback to getopt for non-GNU
	  systems.
	* configure.in: New *BSD and getopt_long test.

2002-10-15	<mschimek@users.sf.net>

	* src/event.h, src/ure.h: s/stdint.h/inttypes.h/ for BSD.
	* configure.in, src/Makefile.am, test/Makefile.am:
	  -lpthread only on Linux.
	* src/io_v4l.c, src/io_v4l2.c: Did not compile when
	  v4l/v4l2 disabled.

2002-10-11	<mschimek@users.sf.net>

	* src/packet.c, test/capture.c: Wrong assumption on char signedness.
	* src/trigger.c (parse_atvef): Fix in type identification.

2002-10-07	<mschimek@users.sf.net>

	* src/exp-gfx.c (vbi_draw_vt_page_region): Flash fix. Zapping
	  not affected.

2002-10-04	<mschimek@users.sf.net>

	* Release 0.2.2.

2002-10-01	<mschimek@users.sf.net>

	* m4: Removed gtk-doc.m4, no longer needed.
	* Makefile.am: m4 in the dist. Thought it's unnecessary, but what
	  the heck, it's not that much.
	* configure.in, test: Added two checks.

2002-09-28	<mschimek@users.sf.net>

	* po/fr.po: Updated by Christian Marillat.

2002-09-26	<mschimek@users.sf.net>

	* src/export.c, src/export.h, src/io.h, src/teletext.c: gettext()
	  fix, should have been dgettext(). Oops.