@@ -1,13 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.18 2002-11-30 02:37:04 mschimek Exp $
+dnl $Id: configure.in,v 1.19 2002-12-24 15:16:22 mschimek Exp $
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(zvbi, 0.2.3)
+AM_INIT_AUTOMAKE(zvbi, 0.2.4)
 AM_CONFIG_HEADER(config.h)
 AM_ACLOCAL_INCLUDE(m4)
 
 dnl curr (added interf) : rev (of curr) : age (curr-age compat)
-AC_SUBST(LIBZVBI_SO_VERSION, [1:3:1])
+AC_SUBST(LIBZVBI_SO_VERSION, [1:4:1])
 
 AC_PROG_CC
 AC_PROG_CXX
